# libGBP

./: .gitignore  .vimrc  CMakeLists.txt  GBP.doxygen.in  README.md  conanfile.py  conanfile.txt  justfile
applications/: gbp-cli.cpp
cmake/Modules/: TestCompileErrors.cmake
conan/recipes/unitconvert/: conanfile.py
doc/: example-gbp-cli-config.txt  example-pyGBP.py
doc/writeups/LaserBeamConventions/: LaserBeamConventions.aux  LaserBeamConventions.tex
doc/writeups/LaserBeamConventions/figures/: beam-propagation-factor.gnuplot
examples/: gbp-cli-example.conf
models/: rhesus-eye-model.ini
src/: BeamBuilder.hpp  BeamConfigurator.hpp  CMakeLists.txt  Constants.hpp  GBPCalc.hpp  GaussianBeam.cpp  GaussianBeam.hpp  LaserBeam.hpp  MediaStack.hpp  OpticalElement.hpp  OpticalSystem.hpp  Propagator.hpp  Units.hpp  version.h
src/Builders/: BeamBuilder.hpp  Builder.hpp  MediaBuilder.hpp  MediaStackBuilder.hpp  OpticalElementBuilder.hpp  OpticalSystemBuilder.hpp
src/Media/: Absorber.hpp  AbsorberStack.hpp  BaseMedia.hpp  LinearAbsorber.hpp  MediaInterface.hpp
src/OpticalElements/: BaseOpticalElement.hpp  Filter.hpp  FlatInterface.hpp  IdealElement.hpp  Interface.hpp  OpticalElementBuilder.hpp  OpticalElementInterface.hpp  SphericalInterface.hpp  ThinLens.hpp
src/libGBP/: Constants.hpp  GBPCalc.hpp  GaussianBeam.hpp  LaserBeam.hpp  MediaStack.hpp  OpticalSystem.hpp  Units.hpp  version.h.in
src/libGBP/BeamTransformations/: BeamTransformation_Base.hpp  BeamTransformation_Interface.hpp  Filter.hpp  FlatInterface.hpp  Interface.hpp  SphericalInterface.hpp  ThinLens.hpp  Translation.hpp
src/libGBP/Builders/: BeamBuilder.hpp  Builder.hpp  MediaBuilder.hpp  MediaStackBuilder.hpp  OpticalElementBuilder.hpp  OpticalSystemBuilder.hpp
src/libGBP/Builders/BeamTransformations/: FlatInterface.hpp  Interface.hpp  SphericalInterface.hpp  ThinLens.hpp
src/libGBP/Media/: BaseMedia.hpp  LinearAbsorber.hpp  MediaInterface.hpp
src/libGBP/OpticalElements/: BaseOpticalElement.hpp  Filter.hpp  Interface.hpp  OpticalElementInterface.hpp  SphericalInterface.hpp  ThinLens.hpp  Translation.hpp
src/libGBP/swig/: py_libGBP_wrap.cpp
src/libGBP2/: CircularGaussianLaserBeam.hpp  CircularLaserBeam.hpp  Constants.hpp  Conventions.hpp  MonochromaticSource.hpp  OpticalSystem.hpp  Propagation.hpp  Units.hpp
src/libGBP2/Application/: Messages.proto  Propagator.hpp
src/libGBP2/MessageAPI/: CMakeLists.txt  Messages.cpp  Messages.hpp  Messages.proto  Propagator.cpp  Propagator.hpp
src/libGBP2/OpticalElements/: FlatRefractiveSurface.hpp  FreeSpace.hpp  OpticalElement.hpp  SphericalRefractiveSurface.hpp  ThickLens.hpp  ThinLens.hpp
src/swig/: py_libGBP_wrap.cpp
src/utils/: ptree.hpp
swig/: CMakeLists.txt  libGBP.i  py_libGBP.py
swig/unitTests/python/: test_GaussianBeam.py  test_module_import.py
testing/: CMakeLists.txt  DrvsDc.cpp  pre-tag-release.sh  unitTests.cpp
testing/Applets/: DrvsDc.cpp
testing/CatchTests/: ABCD.cpp  Examples.cpp  LaserBeam.cpp  ODR.cpp  libGBP2-Propagation.cpp  libGBP2.cpp  unitTests.cpp
testing/client_project/: CMakeLists.txt  example.cpp
testing/libGBP2/CatchTests/lib/: LaserClasses.cpp  Optics.cpp  Units.cpp  calcs.py
testing/libGBP2/CatchTests/message-api/: Messages.cpp  Propagator.cpp
